# blog

./: LICENSE  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: about.html  base.html  footer.html  header.html  index.html  post_detail.html  sidebar.html
